@@ -10,6 +10,7 @@
 - Improve grouped search to support using virtual columns for calculations, defining which DB column use to calculate
 - Improve grouped search supporting other SQL functions for calculate in grouped search, ignoring it in bottom search if rails don't support them in calculate (only sum, count, minimum, maximum average)
 - Improve grouped search supporting using group_by with multiple columns or sql code
+- Add disable_on_update_column setting to column to allow skipping disabling the form when a column changes and a request is sent to refresh other fields
 - Rename active_scaffold_habtm_joins to active_scaffold_joins, active_scaffold_habtm_joins is now deprecated
 
 = 4.0.7
